--- a/Postagens-App/src/app/components/posts/listar-posts/listar-posts.component.html
+++ b/Postagens-App/src/app/components/posts/listar-posts/listar-posts.component.html
@@ -73,6 +73,6 @@
       Nenhum Post Cadastrado.
     </div>
   </ng-template>
-  <mat-paginator [length]="pagination.totalItems" [pageSize]="pagination.itemsPerPage"  [pageSizeOptions]="[3, 5, 10]" (page)="pageEvent = $event; pageChanged($event)" showFirstLastButtons></mat-paginator>
+    <mat-paginator #paginator [length]="pagination.totalItems" [pageSize]="pagination.itemsPerPage"  [pageSizeOptions]="[3, 5, 10]" (page)="pageEvent = $event; pageChanged($event)" showFirstLastButtons></mat-paginator>
 </div>
 </div>
